@@ -73,6 +73,8 @@ Template for new versions:
 - `fastdwarf`: allow units to meander and satisfy needs when they have no current job and teledwarf mode is enabled
 - `zone`: add include/only/exclude filter for juveniles to the pasture/pit/cage/restraing assignment screen
 - The "PAUSE FORCED" badge will blink briefly to draw attention if the player attempts to unpause when a DFHack tool window requires the game to be paused
+- `sort`: add "Toggle all filters" hotkey button to the squad assignment panel
+- `sort`: rename "Weak mental fortitude" filter to "Dislikes combat", which should be more understandable
 
 ## Documentation
 - `installing`: Add installation instructions for winskin on Mac
